nobase_include_HEADERS = \
	upipe/ubase.h \
	upipe/ubuf_block.h \
	upipe/ubuf.h \
	upipe/ubuf_pic.h \
	upipe/ubuf_sound.h \
	upipe/uclock.h \
	upipe/uclock_std.h \
	upipe/ueventfd.h \
	upipe/ufifo.h \
	upipe/ulifo.h \
	upipe/ulist.h \
	upipe/ulog.h \
	upipe/ulog_std.h \
	upipe/upipe_flows.h \
	upipe/upipe.h \
	upipe/upipe_linear.h \
	upipe/upipe_sink.h \
	upipe/upipe_source.h \
	upipe/upipe_split.h \
	upipe/upool.h \
	upipe/uprobe.h \
	upipe/uprobe_print.h \
	upipe/upump_common.h \
	upipe/upump.h \
	upipe/uqueue.h \
	upipe/uref_attr.h \
	upipe/uref_block_flow.h \
	upipe/uref_block.h \
	upipe/uref_clock.h \
	upipe/urefcount.h \
	upipe/uref_flow.h \
	upipe/uref.h \
	upipe/uref_pic_flow.h \
	upipe/uref_pic.h \
	upipe/uref_sound_flow.h \
	upipe/uref_sound.h \
	upipe/uref_std.h \
	upipe-modules/upipe_dup.h \
	upipe-modules/upipe_file_sink.h \
	upipe-modules/upipe_file_source.h \
	upipe-modules/upipe_queue_sink.h \
	upipe-modules/upipe_queue_source.h \
	upump-ev/upump_ev.h
