nobase_include_HEADERS = \
	upipe/uatomic.h \
	upipe/ubase.h \
	upipe/ubuf.h \
	upipe/ubuf_block.h \
	upipe/ubuf_block_common.h \
	upipe/ubuf_block_mem.h \
	upipe/ubuf_pic.h \
	upipe/ubuf_pic_common.h \
	upipe/ubuf_pic_mem.h \
	upipe/uclock.h \
	upipe/uclock_std.h \
	upipe/udeal.h \
	upipe/udict.h \
	upipe/udict_dump.h \
	upipe/udict_inline.h \
	upipe/ueventfd.h \
	upipe/ufifo.h \
	upipe/ulifo.h \
	upipe/ulist.h \
	upipe/ulog.h \
	upipe/ulog_stdio.h \
	upipe/ulog_sub.h \
	upipe/umem.h \
	upipe/umem_alloc.h \
	upipe/umem_pool.h \
	upipe/upipe.h \
	upipe/upipe_flows.h \
	upipe/upipe_helper_upipe.h \
	upipe/upipe_helper_uref_mgr.h \
	upipe/upipe_helper_upump_mgr.h \
	upipe/upipe_helper_uclock.h \
	upipe/upipe_helper_linear_output.h \
	upipe/upipe_helper_linear_ubuf_mgr.h \
	upipe/upipe_helper_source_flow_name.h \
	upipe/upipe_helper_source_read_size.h \
	upipe/upipe_helper_sink_delay.h \
	upipe/upipe_helper_split_outputs.h \
	upipe/upipe_helper_split_ubuf_mgr.h \
	upipe/uprobe.h \
	upipe/uprobe_print.h \
	upipe/upump_common.h \
	upipe/upump.h \
	upipe/uqueue.h \
	upipe/uref_attr.h \
	upipe/uref_block_flow.h \
	upipe/uref_block.h \
	upipe/uref_clock.h \
	upipe/urefcount.h \
	upipe/uref_flow.h \
	upipe/uref.h \
	upipe/uref_pic_flow.h \
	upipe/uref_pic.h \
	upipe/uref_sound_flow.h \
	upipe/uref_std.h \
	upipe/uring.h \
	upipe-modules/upipe_dup.h \
	upipe-modules/upipe_file_sink.h \
	upipe-modules/upipe_file_source.h \
	upipe-modules/upipe_queue_sink.h \
	upipe-modules/upipe_queue_source.h \
	upipe-modules/upipe_udp_source.h \
	upipe-modules/upipe_genaux.h \
	upipe-modules/upipe_multicat_sink.h \
	upipe-av/upipe_av.h \
	upipe-av/upipe_avformat_source.h \
	upipe-swscale/upipe_sws.h \
	upipe-ts/upipe_ts_decaps.h \
	upipe-ts/upipe_ts_patd.h \
	upipe-ts/upipe_ts_pesd.h \
	upipe-ts/upipe_ts_psi_split.h \
	upipe-ts/upipe_ts_psim.h \
	upipe-ts/upipe_ts_split.h \
	upipe-ts/upipe_ts_sync.h \
	upipe-ts/uref_ts_flow.h \
	upump-ev/upump_ev.h

pkginclude_HEADERS = upipe/config.h
