SUBDIRS = \
	upipe \
	upump-ev \
	upump-ecore \
	upipe-modules \
	upipe-pthread \
	upipe-framers \
	upipe-ts \
	upipe-filters \
	upipe-av \
	upipe-swscale \
	upipe-swresample \
	upipe-x264 \
	upipe-gl \
	upipe-osx \
	upipe-alsa \
	upipe-blackmagic \
	upipe-nacl \
	upipe-amt \
	upipe-v210

if HAVE_QTWEBKIT
SUBDIRS += upipe-qt
endif
