myincludedir = $(includedir)/upipe-av
myinclude_HEADERS = \
	upipe_av.h \
	upipe_av_pixfmt.h \
	upipe_av_samplefmt.h \
	upipe_avcodec_decode.h \
	upipe_avcodec_encode.h \
	upipe_avformat_sink.h \
	upipe_avformat_source.h \
	uref_av_flow.h \
	uref_avfilter_flow.h \
	ubuf_av.h

if HAVE_AVFILTER
myinclude_HEADERS += upipe_avfilter.h
endif
