myincludedir = $(includedir)/upipe-filters
myinclude_HEADERS = \
	upipe_filter_blend.h \
	upipe_filter_decode.h \
	upipe_filter_encode.h \
	upipe_filter_format.h \
	upipe_filter_ebur128.h \
	upipe_audio_max.h \
	upipe_audio_bar.h \
	upipe_audio_graph.h \
	upipe_rtp_feedback.h \
	upipe_rtcp_fb_receiver.h \
	upipe_filter_vanc.h \
	upipe_zoneplate_source.h \
	upipe_zoneplate.h
