myincludedir = $(includedir)/upipe-framers
myinclude_HEADERS = \
	upipe_h264_framer.h \
	upipe_mpgv_framer.h \
	upipe_mpga_framer.h \
	upipe_a52_framer.h \
	upipe_opus_framer.h \
	upipe_telx_framer.h \
	upipe_dvbsub_framer.h \
	upipe_video_trim.h \
	uref_mpgv.h \
	uref_h264.h \
	uref_h264_flow.h \
	uref_mpga_flow.h \
	uref_mpgv_flow.h \
	upipe_s302_framer.h
